[package]
name = "registry_api"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "migrate",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "json",
    "ipnetwork",
] }
urlencoding = "2.1.3"
anyhow = "1"
base64 = "0.21"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
oauth2 = "4.4.1"
futures = "0.3"
hyper = { version = "0.14", features = [
    "http1",
    "http2",
    "client",
    "server",
    "stream",
] }
once_cell = "1"
percent-encoding = "2"
rand = "0.8"
sha2 = "0.10.7"
crc32fast = "1.3.2"
routerify = "3"
routerify-query = "3"
reqwest = { version = "0.11.18", default-features = false, features = [
    "rustls-tls",
    "stream",
    "gzip",
    "brotli",
    "json",
    "multipart",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
url = "2.5.4"
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", default-features = false, features = [
    "derive",
    "std",
    "env",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
dotenvy = "0.15.7"
const_format = { version = "0.2", features = ["const_generics"] }
tar = "0.4"
tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.19", features = [
    "rt-tokio",
    "rt-tokio-current-thread",
    "trace",
] }
opentelemetry-otlp = "0.12"
opentelemetry-gcloud-trace = "0.5.0"
deno_semver = "0.8.0"
flate2 = "1"
thiserror = "2"
async-tar = "0.4.2"
deno_graph = "0.95.1"
deno_ast = { version = "0.48.0", features = ["view"] }
deno_doc = { version = "=0.178.1", features = ["comrak"] }
deno_error = "0.6.1"
comrak = { version = "0.29.0", default-features = false }
ammonia = "4.0.0"
async-trait = "0.1.73"
jsonwebkey = { version = "0.3.5", features = ["jsonwebtoken", "jwt-convert"] }
jsonwebtoken = "8.3.0"
indexmap = { version = "2.1.0", features = ["serde"] }
pin-project = "1.1.3"
regex = "1.10.2"
postmark = { version = "=0.10.0", features = ["reqwest-rustls-tls"] }
handlebars = "5.0.0"
jsonc-parser = { version = "0.23", features = ["serde"] }
sha1 = "0.10.6"
infer = "0.15.0"
x509-parser = { version = "0.15.1", features = ["verify"] }
sitemap-rs = "0.2.1"

tree-sitter-highlight = "0.22.6"
tree-sitter-javascript = "0.21.4"
tree-sitter-typescript = "0.21.2"
tree-sitter-json = "0.21.0"
tree-sitter-regex = "0.21.0"
tree-sitter-css = "0.21.0"
tree-sitter-md = "0.2.3"
tree-sitter-rust = "0.21.2"
tree-sitter-html = "0.20.3"
tree-sitter-bash = "0.21.0"
tree-sitter-xml = "0.6.4"
lazy_static = "1.5.0"

[dev-dependencies]
flate2 = "1"
deno_semver = "0.8.0"
pretty_assertions = "1.4.0"
