# Copyright 2024 the JSR authors. All rights reserved. MIT license.
[package]
name = "jsr_api_worker"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

# This crate is its own workspace root, detached from the repo-root workspace
# (which builds the native `registry_api` compute service). Keeping it separate
# means the Cloud Run `api/` build never tries to compile this `wasm32`-only
# crate, and this crate gets its own `Cargo.lock` resolved for the wasm target.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# The Cloudflare workers-rs runtime. Targets `wasm32-unknown-unknown`. The
# `http`/`axum` features let us route with axum (over `http` crate types), to
# match the compute service's router-based structure.
worker = { version = "0.8", features = ["http", "axum"] }
# axum as the router. `default-features = false` drops the tokio/hyper server
# features (not wasm-compatible); `json` keeps `Json` responses.
axum = { version = "0.8", default-features = false, features = ["json"] }
tower-service = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared, wasm-safe JSR types (id newtypes, model structs, API wire types).
# `default-features = false` keeps the `sqlx` feature off so this stays
# wasm-compatible; the Worker only needs the plain structs to build
# byte-identical JSON responses (parity with the compute service).
jsr_types = { path = "../crates/jsr_types", default-features = false }

# Postgres access from the Worker. We reach the existing Cloud SQL Postgres
# through Cloudflare Hyperdrive: `env.hyperdrive(..).connect()` hands back a
# `worker::Socket` (a TCP stream to the Hyperdrive endpoint, TLS terminated by
# Hyperdrive), which `tokio-postgres` drives over `connect_raw`. We turn
# `default-features` OFF so the `runtime` feature (tokio `net`/`time`, `socket2`)
# is excluded — that code does not build for `wasm32`; only the wire-protocol
# codec we use over our own socket remains.
tokio-postgres = { version = "0.7", default-features = false }
# Drives the `tokio-postgres` connection future on the Worker's single-threaded
# event loop (no tokio runtime exists in wasm).
wasm-bindgen-futures = "0.4"
# tokio-postgres' SCRAM auth needs an RNG for its client nonce (via `rand` ->
# `getrandom` 0.4). On `wasm32-unknown-unknown` getrandom has no default
# backend, so we enable `wasm_js` to route it through the JS crypto API. This is
# a direct dep purely to turn that feature on for the transitive copy.
getrandom = { version = "0.4", features = ["wasm_js"] }

# Small release wasm. workers-rs bundles run through `worker-build`, but these
# also keep plain `cargo build --target wasm32-unknown-unknown` artifacts lean.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
